@@ -1,3 +1,11 @@
+2009-07-08  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* common/nwamui_ncu.c (get_nwam_ncu_handle), (nwamui_ncu_clone):
+	Fixed doo:9709
+	* daemon/status_icon.c (daemon_info), (daemon_active_ncp_changed),
+	(daemon_active_env_changed):
+	Reset change notify.
+	
 2009-07-07  Darren Kenny  <darren.kenny@sun.com>
 
 	* common/nwamui_wifi_net.c: 
